@@ -1,7 +1,8 @@
 *** WooCommerce Shipping & Tax Changelog ***
 
 = 1.25.20 - 2021-xx-xx =
-* Fix - Hide "Shipping Label" and "Shipment Tracking" metabox when the label setting is disabled. 
+* Fix - Hide "Shipping Label" and "Shipment Tracking" metabox when the label setting is disabled.
+* Fix - Update shipping label to only show non-refunded order line items.
 
 = 1.25.19 - 2021-10-14 =
 * Add - Notice about tax nexus in settings.
